fix(design): increase accent text contrast against colored backgrounds

--- a/resources/less/system/_variables.less
+++ b/resources/less/system/_variables.less
@@ -139,7 +139,7 @@
   --bg-hsl: 200 10% 10%;
   --text-hsl: 0 0% 93%;
   --muted-hsl: 250 10% 60%;
-  --color-accent-text: hsl(var(--accent-h) var(--accent-s) 70%);
+  --color-accent-text: hsl(var(--accent-h) var(--accent-s) 75%);
   --color-danger-text: hsl(var(--danger-h) var(--danger-s) 70%);
   --color-success-text: hsl(var(--success-h) var(--success-s) 35%);
   --color-warning-text: hsl(var(--warning-h) var(--warning-s) 40%);
